[package]
name = "janet"
version = "0.1.0"
authors = ["FaustXVI <xavier.detant@gmail.com>"]
edition = "2018"

[dependencies]
sysfs_gpio = "0.5"
rocket = "0.4.0"
lazy_static = "1.2.0"

[dev-dependencies]
galvanic-assert = "0.8.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates","serve"]